# Active-Set-Method

./: CMakeLists.txt  LICENSE  README.md
include/: least_squares_active_set.hpp
script/: test.m
src/: main.cpp
